# win32cmake

./: CMakeLists.txt  LICENSE  README.md  sourcelist.cmake
en_us/: ribbonres.h  ribbonres.rc
ja_jp/: ribbonmarkup.bml  ribbonres.h  ribbonres.rc
mui/: mui_rcconfig.xml  mui_x64.bat
src/: App.cpp  App.hpp  CommandHandler.cpp  CommandHandler.hpp  Main.cpp  Main.hpp  WindowsProject1.cpp  WindowsProject1.rc  ribbonmarkup.bml  ribbonmarkup.xml  ribbonres.rc
